# jetson-tx2

./: README.md  git.sh
camera/: 0-camera.cpp
camera/0-camera/: README.md
cuda/: README.md
cuda/.archive/: intro.cu  intro2.cu  mat_mult_array.cu
cuda/.archive/1-blur/: CMakeLists.txt  cpu_blur.cpp  gpu_blur.cpp
cuda/.archive/first/: CMakeLists.txt  README.md  main.cpp
cuda/.archive/first/Subdirectory/: CMakeLists.txt
cuda/.archive/first/include/: cuda_kernels.h
cuda/0-adding/: add_vec.cu  adding.cu
cuda/1-multiplication/: README.md  mat_mult.cu  mat_mult_tile.cu
cuda/2-opencv/0-hello_world/: CMakeLists.txt
cuda/2-opencv/2-imread/: CMakeLists.txt  imread.cpp
cuda/2-opencv/3-onboard_camera/: CMakeLists.txt  cam.cpp
cuda/2-opencv/4-blur/: blur.cpp
cuda/3-cmake_example/: adding.cu
cuda/4-camera/0-camera/: CMakeLists_kindofworking.txt
cuda/4-camera/2-convolution/: main.cu
cuda/4-camera/3-compare/: Makefile
cuda/4-camera/compare/: compare
cuda/4-camera/convolution/: Makefile
cuda/4-camera/fast-image-processing/: filters  main.cu
cuda/4-camera/first/Subdirectory/: custom.h
cuda/4-camera/first/src/: cuda_kernels.cu
cuda/5-cpp-cuda-integration/0-make-example/: gpu_add.h
cuda/5-cpp-cuda-integration/1-make-opencv-example/: Makefile  cpu_functions.cpp  gpu_kernels.h
cuda/5-cpp-cuda-integration/2-particle-nvcc-example/: app
cuda/5-cpp-cuda-integration/make-stuff/: gpu_add.cu  main.cpp
cuda/5-cpp-cuda-integration/make-stuff-opencv/: main.cpp
cuda/5-cpp-cuda-integration/particle-nvcc/: Makefile  main.cpp  particle.cpp  particle.h  v3.cpp
cuda/6-reduction/: mat_mult_reduction.cu
cuda/7-nvcc-vs-make/: README.md
cuda/7-nvcc-vs-make/0-nvcc/: main.cu  tracker
cuda/7-nvcc-vs-make/1-make/: CMakeLists.txt  gpu_kernels.cu  gpu_kernels.h  main.cpp
cuda/7-nvcc-vs-make/1-make/include/: main.h
cuda/7-nvcc-vs-make/1-make/src/: CMakeLists.txt  gpu_kernels.cu  main.cpp
cuda/9-test/: CMakeLists.txt  main.cpp
cuda/adding/: a.out  add_vec.cu  adding.cu  intro.cu
cuda/blur/: blur.cpp
cuda/camera/: CMakeLists.txt  CameraConfig.h.in  main.cpp
cuda/camera/Subdirectory/: custom.cpp
cuda/camera/fast-image-processing/: Makefile  main.cu
cuda/camera/src/: CMakeLists.txt  cuda_kernels.cu
cuda/cmake-example/: CMakeLists.txt  README.md
cuda/compare/: filters  main.cu
cuda/convolution/: 2dconvolution  main.cu
cuda/cpp-cuda-integration/make-stuff/: Makefile  add
cuda/cpp-cuda-integration/make-stuff-opencv/: Makefile  add  cam  gpu_add.cu  gpu_kernels.cu  main.cpp
cuda/cpp-cuda-integration/particle-nvcc/: v3.h
cuda/intro/: README.md  a.out  add_int.cu  add_vec.cu  hello_world  mat_mult.cu
cuda/multiplication/: mat_mult.cu  mat_mult_array.cu
cuda/multiplication/book_example/: book_example.h  book_example_naive.cu  main.cpp
cuda/opencv/blur/: CMakeLists.txt  blur.cpp
cuda/opencv/cv_mat/: CMakeLists.txt  README.md  cv-mat.cpp
cuda/opencv/hello_world/: README.md  hello_world.cpp
cuda/opencv/imread/: imread.cpp
cuda/opencv/onboard_camera/: README.md
cuda/reduction/: reduction.cu
getting_started/: README.md
latex/: README.md
latex/0-sample-report/: SampleReport.aux  SampleReport.bib  SampleReport.tex
latex/0-sample-report/SampleReport/: SampleReport.tex
latex/1-cuda-cheatsheet/: cuda-cheatsheet.aux  cuda-cheatsheet.tex
project/: CMakeLists.txt  Makefile  main.cu  tracker
project/include/: gpu_kernels.h  helpers.h
project/old/: main.cu
project/src/: gpu_kernels.cu  helpers.cpp  main.cpp
python/opencv/: README.md
python/usb-cam/: usbcam.py
